@@ -1,5 +1,10 @@
 2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* kern/i386/pc/mmap.c (grub_machine_mmap_iterate): Zero-fill entry
+	before calling BIOS.
+
+2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/i18n.h: Always enable grub_gettext.
 
 2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>
